[package]
name = "jotaro-sys"
version = "0.1.0"
edition = "2021"
description = "Unsafe bindings to minizip-ng"
license = "zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
bindgen = "0.59"
pkg-config = "0.3"

