[package]
name = "jotaro-sys"
version = "0.1.1"
edition = "2021"
description = "Unsafe bindings to minizip-ng"
license = "Zlib"
repository = "https://github.com/degaart/jotaro-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
bindgen = "0.59"
pkg-config = "0.3"

