[package]
name = "jotaro-sys"
version = "0.1.2"
edition = "2021"
description = "Unsafe bindings to minizip-ng"
license = "Zlib"
repository = "https://github.com/degaart/jotaro-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
openssl-sys = { version = "0.9.99", features = [ "vendored" ] }

[build-dependencies]
cmake = "0.1"
bindgen = "0.59"

